chore: edited card

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,3 +3,7 @@ title: Introduction
 description: "Our documentation site is under construction. Please check back soon."
 ---
 
+<Card title="API Reference" icon="link" href="/api-reference">
+  Build your own applications with our RESTful API, which lets you run workflows
+  programmatically.
+</Card>
