chore: edit title

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: "Our documentation site is under construction. Please check back soon."
+description: "Get started with our API."
 ---
 
 <Card title="API Reference" icon="link" href="/api-reference">
