chore: cleanup docs

--- a/development.mdx
+++ b/development.mdx
@@ -1,10 +1,11 @@
 ---
-title: 'Development'
-description: 'Learn how to preview changes locally'
+title: "Development"
+description: "Learn how to preview changes locally"
 ---
 
 <Info>
-  **Prerequisite**: Please install Node.js (version 19 or higher) before proceeding.
+  **Prerequisite**: Please install Node.js (version 19 or higher) before
+  proceeding.
 </Info>
 
 Step 1. Install Mintlify on your OS:
@@ -62,14 +63,14 @@ yarn global upgrade mintlify
 ## Deployment
 
 <Tip>
-  Unlimited editors available under the [Pro
-  Plan](https://mintlify.com/pricing) and above.
+  Unlimited editors available under the [Pro Plan](https://mintlify.com/pricing)
+  and above.
 </Tip>
 
 You should see the following if the deploy successfully went through:
 
 <Frame>
-  <img src="/images/checks-passed.png" style={{ borderRadius: '0.5rem' }} />
+  <img src="/images/checks-passed.png" style={{ borderRadius: "0.5rem" }} />
 </Frame>
 
 ## Troubleshooting
