docs: updated docs and added getting started section

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,7 +3,7 @@ title: Introduction
 description: "Get started with our API."
 ---
 
-<Card title="API Reference" icon="link" href="/api-reference">
+<Card title="API Reference" icon="link" href="/api-reference/getting-started">
   Build your own applications with our RESTful API, which lets you run workflows
   programmatically.
 </Card>
