--- a/api-reference/getting-started.mdx
+++ b/api-reference/getting-started.mdx
@@ -1,3 +1,8 @@
+---
+title: "Getting Started"
+description: "Learn how to get started running workflows via API"
+---
+
 ### Get Your API Key
 
 To use the Leap Workflows API, you'll need an API key. You can get one by signing up for a free account at [app.tryleap.ai](https://app.tryleap.ai).
