--- a/api-reference/run-workflow.mdx
+++ b/api-reference/run-workflow.mdx
@@ -2,6 +2,6 @@
 openapi: post /v2/runs
 ---
 
-This endpoint enables you to run a workflow, it however does not wait for the workflow to complete, and instead returns immediately with a workflow run `id`.
+This endpoint initiates a workflow run asynchronously. It returns a workflow run `id` immediately and does not wait for completion.
 
-You can then use the [Get Workflow Run](/api-reference/get-workflow-run) endpoint to check on the status of the workflow run, and retrieve the output of the workflow.
+To monitor the workflow's progress and get results, use the [Get Workflow Run](/api-reference/get-workflow-run) endpoint with the returned `id`. A common pattern is to poll this endpoint periodically until the workflow completes.
