chore: added cancel FAQ

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,3 +7,17 @@ description: "Get started with our API."
   Build your own applications with our RESTful API, which lets you run workflows
   programmatically.
 </Card>
+
+## FAQs
+
+<AccordionGroup>
+<Accordion title="How do I cancel my account?" icon="circle-xmark">
+  To cancel your account:
+  1. Click on your user icon (showing your name/email) in the bottom left corner of the dashboard
+  2. Select "Billing" from the menu
+  3. Look for the cancellation option in the billing page
+
+If you experience any issues with cancellation, please contact us at help@tryleap.ai and we'll be happy to assist.
+
+</Accordion>
+</AccordionGroup>
