chore: added details on support

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -20,4 +20,15 @@ description: "Get started with our API."
 If you experience any issues with cancellation, please contact us at help@tryleap.ai and we'll be happy to assist.
 
 </Accordion>
+<Accordion title="How can I contact support?" icon="circle-xmark">
+  For support, you can reach us in several ways:
+
+1. Email us at help@tryleap.ai (please include the email address associated with your account)
+2. Check our documentation at https://docs.tryleap.ai
+
+Our support team typically responds within 24 hours on business days. For urgent matters, please mark your email as high priority.
+
+To speed up resolution, please include as much detail as possible when contacting us, and email us from the same email address associated with your account.
+
+</Accordion>
 </AccordionGroup>
