chore: update routes

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,34 +1,24 @@
 ---
 title: Introduction
-description: "Get started with our API."
+description: "Learn how to use Leap to build powerful AI workflows."
 ---
+
+## Overview
+
+<CardGroup cols={2}>
+  <Card title="Actions" icon="link" href="/product/actions">
+    Actions are the building blocks of workflows. They are the steps that
+    perform the work in your workflow.
+  </Card>
+  <Card title="Triggers" icon="link" href="/product/triggers">
+    Triggers are the first step in building a workflow. They determine when and
+    how your workflow should run.
+  </Card>
+</CardGroup>
+
+## Developer Resources
 
 <Card title="API Reference" icon="link" href="/api-reference/getting-started">
   Build your own applications with our RESTful API, which lets you run workflows
   programmatically.
 </Card>
-
-## FAQs
-
-<AccordionGroup>
-<Accordion title="How do I cancel my account?" icon="circle-xmark">
-  To cancel your account:
-  1. Click on your user icon (showing your name/email) in the bottom left corner of the dashboard
-  2. Select "Billing" from the menu
-  3. Look for the cancellation option in the billing page
-
-If you experience any issues with cancellation, please contact us at help@tryleap.ai and we'll be happy to assist.
-
-</Accordion>
-<Accordion title="How can I contact support?" icon="circle-xmark">
-  For support, you can reach us in several ways:
-
-1. Email us at help@tryleap.ai (please include the email address associated with your account)
-2. Check our documentation at https://docs.tryleap.ai
-
-Our support team typically responds within 24 hours on business days. For urgent matters, please mark your email as high priority.
-
-To speed up resolution, please include as much detail as possible when contacting us, and email us from the same email address associated with your account.
-
-</Accordion>
-</AccordionGroup>
