chore: added actions and cleaned up a bit

--- a/faqs.mdx
+++ b/faqs.mdx
@@ -4,7 +4,7 @@ description: "Answers to frequently asked questions about Leap."
 ---
 
 <AccordionGroup>
-<Accordion title="How do I cancel my account?" icon="circle-xmark">
+<Accordion title="How do I cancel my account?">
   To cancel your account:
   1. Click on your user icon (showing your name/email) in the bottom left corner of the dashboard
   2. Select "Billing" from the menu
@@ -13,7 +13,7 @@ description: "Answers to frequently asked questions about Leap."
 If you experience any issues with cancellation, please contact us at help@tryleap.ai and we'll be happy to assist.
 
 </Accordion>
-<Accordion title="How can I contact support?" icon="circle-xmark">
+<Accordion title="How can I contact support?">
   For support, you can reach us in several ways:
 
 1. Email us at help@tryleap.ai (please include the email address associated with your account)
