--- a/product/triggers.mdx
+++ b/product/triggers.mdx
@@ -11,7 +11,7 @@ When building a workflow in the Workflows Builder, selecting a trigger is always
 
 ## Creating a Trigger
 
-To create a trigger, click the "Add Trigger" button in the top right corner of the Workflows Builder and select the type of trigger you want to create.
+To create a trigger, click the "Add Trigger" button in the bottom left corner of the Workflows Builder and select the type of trigger you want to create.
 
 <Frame>
   <video
