added a couple more docs with FAQs

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,14 +3,20 @@ title: Introduction
 description: "Learn how to use Leap to build powerful AI workflows."
 ---
 
-## Overview
+## Building Workflows
 
+<CardGroup cols={1}>
+  <Card title="Getting Started" icon="rocket" href="/product/getting-started">
+    Learn how to create your first workflow, configure actions and triggers, and
+    publish your workflow.
+  </Card>
+</CardGroup>
 <CardGroup cols={2}>
-  <Card title="Actions" icon="link" href="/product/actions">
+  <Card title="Actions" icon="puzzle-piece" href="/product/actions">
     Actions are the building blocks of workflows. They are the steps that
     perform the work in your workflow.
   </Card>
-  <Card title="Triggers" icon="link" href="/product/triggers">
+  <Card title="Triggers" icon="bolt" href="/product/triggers">
     Triggers are the first step in building a workflow. They determine when and
     how your workflow should run.
   </Card>
@@ -18,7 +24,9 @@ description: "Learn how to use Leap to build powerful AI workflows."
 
 ## Developer Resources
 
-<Card title="API Reference" icon="link" href="/api-reference/getting-started">
+<Card title="API Reference" icon="code" href="/api-reference/getting-started">
   Build your own applications with our RESTful API, which lets you run workflows
   programmatically.
 </Card>
+
+<Note>Still have questions? Reach out to us at help@tryleap.ai.</Note>
