--- a/product/actions.mdx
+++ b/product/actions.mdx
@@ -104,4 +104,31 @@ This ensures transparent cost management for AI-powered workflows.
     We're constantly expanding our integration library and love hearing about new use cases from our users.
     </Accordion>
 
+    <Accordion title="How do I delete an action from my workflow?">
+    Deleting an action is simple:
+
+    1. Select the action you want to remove in the workflow editor
+    2. Press the Delete or Backspace key on your keyboard
+    3. The action will be removed from your workflow
+
+    Remember to republish your workflow after making changes.
+    </Accordion>
+
+    <Accordion title="How can I disconnect and reconnect actions?">
+    To manage action connections in your workflow:
+
+    1. **Disconnect actions:**
+       - Click on the connecting line (edge) between two actions
+       - Press Delete/Backspace to remove the connection
+
+    2. **Reconnect or move actions:**
+       - Click and drag from the teal handle on one action
+       - Drop onto the handle of another action to create a new connection
+       - You can connect actions in any order to restructure your workflow
+
+    Remember to test your workflow after modifying connections to ensure the new flow works as expected.
+
+    Some types of connections are not allowed. For example, connecting an action to itself, or creating a loop.
+    </Accordion>
+
 </AccordionGroup>
