--- a/product/triggers.mdx
+++ b/product/triggers.mdx
@@ -39,6 +39,8 @@ This is ideal for:
 - One-off workflow executions
 - Integration into your own applications
 
+Manual triggers allow you to configure an optional set of input parameters.
+
 ### Schedule Triggers
 
 Schedule triggers let you run workflows automatically at specified intervals using cron expressions. For example:
