--- a/api-reference/webhooks.mdx
+++ b/api-reference/webhooks.mdx
@@ -3,4 +3,4 @@ title: "Webhooks"
 description: "Learn how to use webhooks to receive updates about your workflow runs"
 ---
 
-Coming soon!
+These are currently under development, and will be available soon. If you have any questions, please reach out to us at help@tryleap.ai.
