chore: added changelog

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -20,6 +20,14 @@ description: "Learn how to use Leap to build powerful AI workflows."
     Triggers are the first step in building a workflow. They determine when and
     how your workflow should run.
   </Card>
+  <Card title="Conditionals" icon="code-branch" href="/product/conditionals">
+    Conditionals let you add branching logic to your workflows. Control the flow
+    based on data and conditions.
+  </Card>
+  <Card title="Loops" icon="rotate" href="/product/loops">
+    Loops allow you to repeat actions multiple times. Iterate through data or
+    run steps until a condition is met.
+  </Card>
 </CardGroup>
 
 ## Developer Resources
