--- a/product/getting-started.mdx
+++ b/product/getting-started.mdx
@@ -55,10 +55,12 @@ description: "This guide will help you get started creating your first workflow"
 
 To build effective workflows, it's important to understand the core concepts:
 
-- [Actions](/product/actions) - Learn about the building blocks of workflows and how to configure different types of actions
-- [Triggers](/product/triggers) - Understand what triggers are available and how to configure them to automate your workflows
+- [Actions](/product/actions) - Add actions to your workflow to perform tasks like sending messages, generating AI content, and more
+- [Triggers](/product/triggers) - Choose how to start your workflow: manually, on a schedule, or based on external events
+- [Conditionals](/product/conditionals) - Add if/then logic to make your workflow smarter
+- [Loops](/product/loops) - Repeat actions to handle multiple items at once
 
-These guides will help you make the most of Leap's workflow capabilities and build more sophisticated automations.
+If you have any questions, please reach out to us at help@tryleap.ai.
 
 <Tip>
   You can also run workflows from the API, see our [API
