--- a/product/triggers.mdx
+++ b/product/triggers.mdx
@@ -75,3 +75,8 @@ Event triggers are ideal for:
 - Automated responses
 - Integration with external services
 - Building interactive applications
+
+<Info>
+  Triggers won't be activated until you publish your workflow. Any changes you
+  make to triggers will require republishing the workflow to take effect.
+</Info>
