chore: added mention of leap

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,14 +3,23 @@ title: Introduction
 description: "Learn how to use Leap to build powerful AI workflows."
 ---
 
-## Building Workflows
+Leap is a no-code workflow automation platform for building and deploying AI-powered workflows. Connect AI services and tools to create sophisticated automation pipelines that automate repetitive work and streamline your processes.
 
-<CardGroup cols={1}>
-  <Card title="Getting Started" icon="rocket" href="/product/getting-started">
-    Learn how to create your first workflow, configure actions and triggers, and
-    publish your workflow.
-  </Card>
-</CardGroup>
+## Key Features
+
+- **Visual Builder**: Intuitive drag-and-drop workflow creation
+- **AI Integration**: Native support for OpenAI, Anthropic, Fal.ai and more
+- **Third-Party Tools**: Seamless integration with Slack, GitHub and others
+- **Logic Controls**: Built-in conditionals and loops
+- **API Access**: RESTful API for programmatic execution
+- **Scheduling**: Automated workflow runs on schedule
+
+From AI applications to business automation, Leap provides the tools to bring your ideas to life and automate your work.
+
+[Get started with your first workflow →](/product/getting-started)
+
+## Core Concepts
+
 <CardGroup cols={2}>
   <Card title="Actions" icon="puzzle-piece" href="/product/actions">
     Actions are the building blocks of workflows. They are the steps that
