chore: added marketing automation example

--- a/changelog/product-updates.mdx
+++ b/changelog/product-updates.mdx
@@ -1,3 +1,8 @@
+---
+title: Product Updates
+description: "Discover our latest features, improvements, and product announcements."
+---
+
 <Update label="November 2024">
 ## API 2.0
 
