chore: edited docs

--- a/product/loops.mdx
+++ b/product/loops.mdx
@@ -46,8 +46,8 @@ Loops require two main configurations:
 
 #### AI-Generated Lists
 
-- **AI Auto**: Automatically generate a list based on context
-- **AI Prompt**: Generate a list by providing specific prompts to the AI
+- **AI Auto**: Automatically try to infer a list of items from the context
+- **AI Prompt**: Generate a list while providing a prompt/guidance to the AI
 
 ## Loop Settings
 
