chore: added more FAQs

--- a/faqs.mdx
+++ b/faqs.mdx
@@ -24,4 +24,49 @@ Our support team typically responds within 24 hours on business days. For urgent
 To speed up resolution, please include as much detail as possible when contacting us, and email us from the same email address associated with your account.
 
 </Accordion>
+
+<Accordion title="What if Leap doesn't have the integration that I want?">
+  We offer customers the ability to request any integration they want, and we
+  can typically ship these within 24 hours. Simply reach out to our support
+  email at help.tryleap.ai and we'll prioritize getting that integration built
+  for you.
+</Accordion>
+
+<Accordion title="Can I integrate Leap with my own systems?">
+  Yes! We provide integration options in two ways: 1. A custom HTTP step that
+  lets you connect to any API endpoint within your workflows 2. Our Leap API
+  that allows you to programmatically trigger workflows from any external
+  service or product and retrieve the results
+</Accordion>
+
+<Accordion title="How can Leap help me design and build workflows?">
+  While we don't provide direct implementation services, our solutions team offers comprehensive guidance. For Business tier customers, we provide:
+  1. 1-on-1 consultation calls to help spec out workflows
+  2. Private Slack channels for ongoing support
+
+We'll help you think through the design and recommend the right steps and actions to accomplish your goals.
+
+</Accordion>
+
+<Accordion title="Can I try Leap by myself?">
+  Absolutely! We have a fully self-serve tier that you can sign up for and begin
+  using immediately. We provide many templates to help you get started quickly
+  and efficiently with your automation needs.
+</Accordion>
+
+<Accordion title="How many integrations does Leap support?">
+  We support hundreds of integrations and are continuously adding more on a
+  near-daily basis. Our extensive integration library ensures you can connect
+  with virtually any service you need.
+</Accordion>
+
+<Accordion title="How secure is Leap AI for managing my data and workflows?">
+  Your data's security is our top priority. We use:
+  - Enterprise-grade encryption
+  - Regular security audits
+  - Compliant infrastructure
+
+All data is encrypted both in transit and at rest, and we maintain strict access controls and monitoring.
+
+</Accordion>
 </AccordionGroup>
