chore: fixed email

--- a/faqs.mdx
+++ b/faqs.mdx
@@ -20,7 +20,7 @@ To speed up resolution, please include as much detail as possible when contactin
 <Accordion title="What if Leap doesn't have the integration that I want?">
   We offer customers the ability to request any integration they want, and we
   can typically ship these within 24 hours. Simply reach out to our support
-  email at help.tryleap.ai and we'll prioritize getting that integration built
+  email at help@tryleap.ai and we'll prioritize getting that integration built
   for you.
 </Accordion>
 
