chore: update videos

--- a/product/actions.mdx
+++ b/product/actions.mdx
@@ -20,7 +20,7 @@ To add an action, click the "Add Action" button in the workflow builder and sele
     loop
     playsInline
     className="w-full"
-    src="https://storage.cloud.google.com/leap-docs/triggers.mp4"
+    src="https://storage.cloud.google.com/leap-docs/actions.mp4"
   ></video>
 </Frame>
 
