--- a/product/getting-started.mdx
+++ b/product/getting-started.mdx
@@ -13,7 +13,7 @@ description: "This guide will help you get started creating your first workflow"
     loop
     playsInline
     className="w-full"
-    src="https://storage.cloud.google.com/leap-docs/triggers.mp4"
+    src="https://storage.cloud.google.com/leap-docs/create_workflow.mp4"
   ></video>
 </Frame>
 </Step>
@@ -31,7 +31,7 @@ description: "This guide will help you get started creating your first workflow"
       loop
       playsInline
       className="w-full"
-      src="https://storage.cloud.google.com/leap-docs/triggers.mp4"
+      src="https://storage.cloud.google.com/leap-docs/configure_workflow.mp4"
     ></video>
   </Frame>
 </Step>
@@ -45,7 +45,7 @@ description: "This guide will help you get started creating your first workflow"
     loop
     playsInline
     className="w-full"
-    src="https://storage.cloud.google.com/leap-docs/triggers.mp4"
+    src="https://storage.cloud.google.com/leap-docs/publish.mp4"
   ></video>
 </Frame>
   </Step>
