--- a/product/loops.mdx
+++ b/product/loops.mdx
@@ -21,7 +21,7 @@ To add a loop to your workflow:
     loop
     playsInline
     className="w-full"
-    src="https://storage.cloud.google.com/leap-docs/loops.mp4"
+    src="https://storage.cloud.google.com/leap-docs/loop.mp4"
   ></video>
 </Frame>
 
