chore: add conditionals video

--- a/product/conditionals.mdx
+++ b/product/conditionals.mdx
@@ -21,7 +21,7 @@ To add a conditional to your workflow:
     loop
     playsInline
     className="w-full"
-    src="https://storage.cloud.google.com/leap-docs/triggers.mp4"
+    src="https://storage.cloud.google.com/leap-docs/conditionals.mp4"
   ></video>
 </Frame>
 
